<resources>
    <string name="app_name">Banco Online</string>
    <string name="lblMail">Correo Electronico</string>
    <string name="lblCUIT">CUIT / CUIL</string>
    <string name="lblMoneda">Moneda</string>
    <string name="lblMonto">Monto a Invertir</string>
    <string name="lblDias">Días</string>
    <string name="lblDiasSeleccionados">&#160;días de plazo</string>
    <string name="lblIntereses">$</string>
    <string name="lblAccionVencimientoAcreditar">ACREDITAR EN CUENTA</string>
    <string name="lblMonedaDolar">US$</string>
    <string name="lblMonedaPesos">AR$</string>
    <string name="lblAvisarVencimiento">Avisar por mail antes del vencimiento</string>
    <string name="lblAccionVencimientoRenovar">RENOVAR EN CUENTA</string>
    <string name="lblAceptoTerminos">Acepto Terminos y Condiciones</string>
    <string name="lblHacerPF">HACER PLAZO FIJO</string>


</resources>
